Avoid squashing room viz for rectangular rooms

--- a/src/components/RoomViz.css
+++ b/src/components/RoomViz.css
@@ -1,9 +1,10 @@
 svg {
-  width: 200px;
+  max-width: 200px;
   display: inline-block;
   background-color: #f7f7f7;
   border: 1px solid darkgray;
-  height: 200px;
+  height: 100%;
+  max-height: 200px;
 }
 svg.error {
   background-color: pink;
